--- a/navbar-header/1/styles.css
+++ b/navbar-header/1/styles.css
@@ -3,7 +3,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #24252A;
 }
 
 li, a, button {
@@ -19,6 +18,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
+    height: fit-content;
+    background-color: #24252A;
 }
 
 .logo {
